# PyQfx

./: LICENSE  MANIFEST.in  README.md  entry_points.cfg  setup.cfg  setup.py
Qfx/: QfxCommon.py  QfxDebug.ipynb  QfxDecomposer.py  QfxMySql.py  QfxPriceConfig.py  QfxPriceHistory.py  QfxPriceResid.py  QfxPriceSeasonal.py  QfxPriceShiftTime.py  QfxPriceTrend.py  __init__.py
Qfx/Config/: MySql.ini
Qfx/Sql/: price_history_close.sql  price_history_count.sql  price_history_shift_time_backward.sql  price_history_shift_time_first.sql  price_history_shift_time_forward.sql  price_history_shift_time_last.sql  price_history_total.sql  price_resid_delete.sql  price_resid_delete_all.sql  price_resid_insert.sql  price_resid_shift_time_first.sql  price_resid_shift_time_last.sql  price_resid_update.sql  price_resid_value.sql  price_seasonal_delete.sql  price_seasonal_delete_all.sql  price_seasonal_insert.sql  price_seasonal_shift_time_first.sql  price_seasonal_shift_time_last.sql  price_seasonal_update.sql  price_seasonal_value.sql  price_trend_delete.sql  price_trend_delete_all.sql  price_trend_insert.sql  price_trend_shift_time_first.sql  price_trend_shift_time_last.sql  price_trend_update.sql  price_trend_value.sql
