[metadata]
name = Qfx
version = 1.0.0
license_file = file: LICENSE
author = Yukinaga Matsumoto
author_email = yukinaga@qc.commufa.jp
url = https://github.com/yukinagam/Qfx
description = Qfx: Qfx: Time series analysis for FX.
long_description = file: README.md

# パッケージの分類定義を構成します。
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    matplotlib
    dataclasses
    mysql-connector-python
    datetime
    numpy
    pandas
    scipy
    statsmodels
    tqdm
    configparser
    pkg_resources
    terminaltables



# パッケージをインストールすることで、パッケージ内に定義した関数をコマンドとして呼び出せるようにします。
entry_points = file: entry_points.cfg


# "python setup.py bdist_wheel" によって出力される whl ファイルを Python2, 3 両用とする。
[wheel]
universal = 1